WiFiManager update to  2.0.11

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,16 +10,17 @@
 
 [env:esp32dev]
 platform = espressif32
-board = esp32dev
+board = esp32-s3-devkitc-1
 framework = arduino
-build_flags = -DLV_LVGL_H_INCLUDE_SIMPLE
-			-I./src/lv_app 
-			-I./src/lv_app/font
-			-I./src/lv_app/image
-			-I./src/lv_drivers/display 
-			-I./src/lv_drivers/indev 
-			-I./src/network
-			-I./src/sdcard
+build_flags = 
+	-DLV_LVGL_H_INCLUDE_SIMPLE
+	-I./src/lv_app
+	-I./src/lv_app/font
+	-I./src/lv_app/image
+	-I./src/lv_drivers/display
+	-I./src/lv_drivers/indev
+	-I./src/network
+	-I./src/sdcard
 lib_deps = 
 	FS
 	SPIFFS
